--- a/alkonackanV1/AndroidManifest.xml
+++ b/alkonackanV1/AndroidManifest.xml
@@ -7,18 +7,24 @@
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="start"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 		
-		<activity android:name = "about"></activity>
-		<activity android:name = "options"></activity>
-		<activity android:name = "overview"></activity>
-		<activity android:name = "session"></activity>
-		<activity android:name = "sessionlist"></activity>
+		<activity android:name = "about"
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+		<activity android:name = "options"
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+		<activity android:name = "overview"
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+		<activity android:name = "session"
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+		<activity android:name = "sessionlist"
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
 
 
     </application>
