--- a/alkonackanV1/AndroidManifest.xml
+++ b/alkonackanV1/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="start"
                   android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -16,15 +17,19 @@
         </activity>
 		
 		<activity android:name = "about"
-		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+		android:screenOrientation="portrait"></activity>
 		<activity android:name = "options"
-		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+		android:screenOrientation="portrait"></activity>
 		<activity android:name = "overview"
 		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
 		<activity android:name = "session"
-		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+		android:screenOrientation="portrait"></activity>
 		<activity android:name = "sessionlist"
-		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+		android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+		android:screenOrientation="portrait"></activity>
 
 
     </application>
