--- a/alkonackanV1/AndroidManifest.xml
+++ b/alkonackanV1/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name="start"
+        <activity android:name=".start"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
                   android:screenOrientation="portrait">
